<resources>
    <string name="app_name">Inventory App Udacity</string>
    <string name="error_unknown_uri">Unknown URI, cannot be queried!</string>
    <string name="title_settings">Filter Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_edit">Edit Product</string>
    <string name="menu_delete">Delete Product</string>
    <string name="menu_add_item">Add product</string>

    <!--SETTINGS-->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_oldest_value</string>

    <!--DEFAULT ORDER / ID ASC-->
    <string name="settings_order_by_oldest_label">Oldest First</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!--ORDER BY - ID DESC-->
    <string name="settings_order_by_newest_label">Newest First</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!--ORDER BY - NAME A-Z-->
    <string name="settings_order_by_name_asc_label">Product Name - A-Z</string>
    <string name="settings_order_by_name_asc_value" translatable="false">name-asc</string>

    <!--ORDER BY - NAME Z-A-->
    <string name="settings_order_by_name_desc_label">Product Name - Z-A</string>
    <string name="settings_order_by_name_desc_value" translatable="false">name-desc</string>

    <!--ORDER BY - PRICE ASC-->
    <string name="settings_order_by_price_asc_label">Product Price - Lowest -> Highest</string>
    <string name="settings_order_by_price_asc_value" translatable="false">price-asc</string>

    <!--ORDER BY - PRICE DESC-->
    <string name="settings_order_by_price_desc_label">Product Price -  Highest -> Lowest</string>
    <string name="settings_order_by_price_desc_value" translatable="false">price-desc</string>

    <!--ORDER BY - QUANTITY ASC-->
    <string name="settings_order_by_quantity_asc_label">Quantity - Lowest -> Highest</string>
    <string name="settings_order_by_quantity_asc_value" translatable="false">quantity-asc</string>

    <!--ORDER BY - QUANTITY DESC-->
    <string name="settings_order_by_quantity_desc_label">Quantity - Highest -> Lowest</string>
    <string name="settings_order_by_quantity_desc_value" translatable="false">quantity-desc</string>

    <!--ERROR & DIALOG BOX STRINGS-->
    <string name="dialog_msg_delete">Are you sure you want to delete all the data?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="confirm_delete_all_entries">All products deleted!</string>
    <string name="error_delete_all_entries">Error deleting all the data!</string>
    <string name="exception_image_load_failed">Failed to load image</string>
    <string name="dialog_delete">Are you sure you want to delete this product?</string>
    <string name="error_delete_failed">Failed to delete!</string>
    <string name="confirm_delete_successful">Product deleted successfully!</string>
    <string name="action_select_picture">Select Picture</string>
    <string name="dialog_unsaved_changes">Discard changes?</string>
    <string name="error_update_failed">Product was not updated!</string>
    <string name="confirm_update_successful">Product was updated successfully!</string>
    <string name="error_empty_product">You must enter the product\'s name!</string>
    <string name="error_empty_price">You must enter the product\'s price!</string>
    <string name="error_empty_quantity">You must enter the product\'s quantity!</string>
    <string name="error_empty_supplier_name">You must enter the supplier\'s name!</string>
    <string name="error_empty_supplier_phone">You must enter the suppliers\'s phone!</string>
    <string name="error_insert_failed">Insert failed!</string>
    <string name="exception_unknown_uri"><![CDATA[URI provided is unknown, and cannot be queried => %s]]></string>
    <string name="error_quantity_update">Can not decrement quantity value!</string>

    <!--PLACEHOLDER STRINGS-->
    <string name="placeholder_list_item_product_name">Product name in max 3 lines!</string>
    <string name="placeholder_list_item_product_price">Price: $1000.0</string>
    <string name="placeholder_list_item_product_quantity">Quantity: 25</string>
    <string name="placeholder_detailed_name">Sample product name in max 2 lines</string>
    <string name="placeholder_detailed_supplier_phone">+12 3456 7890</string>

    <!--EMPTY STATE STRINGS-->
    <string name="empty_state_image_content_description">Empty state image</string>
    <string name="empty_state_title">No items in the inventory!</string>
    <string name="empty_state_subtitle">Get started by adding new products to the inventory!</string>

    <!--LABELS & CONSTANT TEXT STRINGS-->
    <string name="price_text_label">Price: $%.2f</string>
    <string name="quantity_text_label">Quantity: %d</string>
    <string name="detailed_product_name">Product Name</string>
    <string name="detailed_product_price">Product Price</string>
    <string name="detailed_supplier_name">Supplier Name</string>
    <string name="detailed_supplier_phone">Supplier Phone</string>
    <string name="editor_instruction">FIll in all the fields to proceed!</string>
    <string name="editor_product_name">Product Name:</string>
    <string name="editor_product_price">Product Price:</string>
    <string name="editor_product_quantity">Product Quantity:</string>
    <string name="editor_supplier_name">Supplier Name:</string>
    <string name="editor_supplier_phone">Supplier Phone:</string>
    <string name="editor_browse_image_button">Browse Image...</string>
</resources>
