<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:text="@string/editor_instruction"
            style="@style/editor_instructions" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/editor_product_name"
                style="@style/editor_product_name_label" />
            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLines="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/editor_product_price"
                style="@style/editor_product_price_label" />
            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:maxLines="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/editor_product_quantity"
                style="@style/editor_product_quantity_label" />
            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/editor_supplier_name"
                style="@style/edit_supplier_name_label" />
            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:maxLines="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/editor_supplier_phone"
                style="@style/edit_supplier_phone_label" />
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLines="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/edit_browse_button"
            android:text="@string/editor_browse_image_button"
            style="@style/edit_browse_button" />
        <ImageView
            android:id="@+id/edit_image"
            style="@style/edit_inserted_image" />
    </LinearLayout>

</ScrollView>