<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/product_image_image"
        tools:src="@drawable/ic_shopping_cart_black_24dp"
        style="@style/list_image" />
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:padding="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/product_name_text"
            tools:text="@string/placeholder_list_item_product_name"
            style="@style/list_product_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/product_price_text"
                tools:text="@string/placeholder_list_item_product_price"
                style="@style/list_product_price" />

            <TextView
                android:id="@+id/product_quantity_text"
                tools:text="@string/placeholder_list_item_product_quantity"
                style="@style/list_quantity" />

            <ImageButton
                android:id="@+id/product_sale_button"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                style="@style/list_shop_button" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>